--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -3,3 +3,8 @@ document.database=demo
 document.host=127.0.0.1:27017
 
 
+mongo.hostname=localhost
+mongo.port=27017
+mongo.dbname=
+mongo.user
+mongo.pass.encoded
