--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,10 @@
 
         <!--<version.payara>6.2021.1.Alpha1</version.payara>-->
        
-    <version.payara.micro>6.2022.1.Alpha2</version.payara.micro>
+        <version.payara.micro>6.2022.1.Alpha2</version.payara.micro>
         <version.payara>6.2022.1.Alpha2</version.payara>
-<!--        <version.payara>5.2022.2</version.payara>
+        <version.jmoordbcoregenesis>1.0-5</version.jmoordbcoregenesis>
+        <!--        <version.payara>5.2022.2</version.payara>
         <version.payara.micro>5.2022.2</version.payara.micro>-->
         
         <jakarta.nosql.version>1.0.0-b2</jakarta.nosql.version>
@@ -55,7 +56,7 @@
         <!--
                        
         -->
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>5.0.0</version>
@@ -96,7 +97,7 @@
         </dependency>
         
 
-<!--    <dependency>
+        <!--    <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jmoordbcdi</artifactId>
             <version>1.0-4</version>
@@ -109,15 +110,26 @@
         
         
         
-<!--    <dependency>
-	    <groupId>com.github.avbravo</groupId>
-	    <artifactId>jmoordbcdi</artifactId>
-	    <version>1.0-4</version>
-	</dependency>-->
+        <!--    <dependency>
+            <groupId>com.github.avbravo</groupId>
+            <artifactId>jmoordbcdi</artifactId>
+            <version>1.0-4</version>
+        </dependency>-->
+<!--        <dependency>
+            <groupId>com.jmoordbcoregenesis</groupId>
+            <artifactId>jmoordbcoregenesis</artifactId>
+            <version>${version.jm}</version>
+            <version>1.0-4</version>
+        </dependency>-->
+<!--        <dependency>
+            <groupId>com.jmoordbcoregenesis</groupId>
+            <artifactId>jmoordbcoregenesis</artifactId>
+            <version>#{version.jmoordbcoregenesis}</version>
+        </dependency>-->
         <dependency>
             <groupId>com.jmoordbcoregenesis</groupId>
             <artifactId>jmoordbcoregenesis</artifactId>
-            <version>1.0-4</version>
+            <version>1.0-5</version>
         </dependency>
     </dependencies>
     
@@ -195,9 +207,9 @@
         </plugins>
     </build>
     <repositories>
-		<repository>
-		    <id>jitpack.io</id>
-		    <url>https://jitpack.io</url>
-		</repository>
-	</repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 </project>
