--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -1,6 +1,8 @@
 document=document
-document.database=demo
-document.host=127.0.0.1:27017
+document.database=microgenesis
+document.settings.jakarta.nosql.host=127.0.0.1:27017
+document.provider=org.eclipse.jnosql.diana.mongodb.document.MongoDBDocumentConfiguration
+
 
 
 mongo.hostname=localhost
