--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <version.payara.micro>5.2022.2</version.payara.micro>-->
         
         <jakarta.nosql.version>1.0.0-b2</jakarta.nosql.version>
+        <microprofile.version>5.0</microprofile.version>
         <!--<version.payara.micro>6.2021.1.Alpha1</version.payara.micro>-->
     </properties>
     
@@ -115,13 +116,13 @@
             <artifactId>jmoordbcdi</artifactId>
             <version>1.0-4</version>
         </dependency>-->
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>com.jmoordbcoregenesis</groupId>
             <artifactId>jmoordbcoregenesis</artifactId>
             <version>${version.jm}</version>
             <version>1.0-4</version>
         </dependency>-->
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>com.jmoordbcoregenesis</groupId>
             <artifactId>jmoordbcoregenesis</artifactId>
             <version>#{version.jmoordbcoregenesis}</version>
@@ -131,9 +132,37 @@
             <artifactId>jmoordbcoregenesis</artifactId>
             <version>1.0-5</version>
         </dependency>
+   
+    
+        <!--
+        jakartanosql
+        -->
+        <dependency>
+            <groupId>org.eclipse.jnosql.artemis</groupId>
+            <artifactId>artemis-document</artifactId>
+            <version>${jakarta.nosql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jnosql.diana</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>${jakarta.nosql.version}</version>
+        </dependency>
+        <!--
+        Microprofile
+        -->
+        <dependency>
+            <groupId>org.eclipse.microprofile</groupId>
+            <artifactId>microprofile</artifactId>
+            <version>${microprofile.version}</version>
+            <type>pom</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile.config</groupId>
+            <artifactId>microprofile-config-api</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
-    
-    
     <build>
         <finalName>microcoregenesis</finalName>
         <plugins>
